--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "i": "^0.3.7",
-    "mongodb": "^5.1.0",
-    "mysql2": "^3.1.2",
+    "mongodb": "^3.1.6",
+    "mongoose": "^7.0.2",
+    "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "sequelize": "^6.28.0"
+    "sequelize": "^5.0.0-beta.11"
   }
 }
